--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -266,6 +266,30 @@ body {
     box-shadow: 0 0 20px cyan;
 }
 
+.read1 {
+    display: inline-block;
+    padding: 12px 28px;
+    background: cyan;
+    border-radius: 40px;
+    margin-top: 25px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+}
+
+.read1:hover {
+    background: cyan;
+    color: #081b29;
+    box-shadow: 0 0 20px cyan;
+}
+
+
+
 .services-list div:hover{
     box-shadow: 0 0 5px cyan, 0 0 25px cyan,
     0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
