--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -28,6 +28,20 @@ body {
     align-items: center;
     z-index: 100;
 }
+
+.header-left{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.header-left i{
+    font-size: 40px;
+    color: cyan;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+}
+
 .footer{
     top: 0;
     left: 0%;
@@ -59,7 +73,7 @@ body {
     animation: slideTop .5s ease forwards;
 }
 .navbar a:hover{
-    color: aqua;
+    color: #082b59;
 }
 
 .home {
@@ -158,7 +172,7 @@ body {
     font-size: 29px;
     font-weight: 600;
     line-height: 1.7;
-    margin: 15px 0 30px;
+    margin: 15px 55px 30px 10px;
 }
 
 .about-text h2{
@@ -174,6 +188,7 @@ body {
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
+    text-align: justify;
 }
 
 #services {
@@ -208,12 +223,12 @@ body {
 
 .services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
 
-.services-list div{
+.services-list .card{
     background-color: transparent;
     padding: 40px;
     font-size: 13px;
@@ -225,14 +240,57 @@ body {
     1px 1px 40px #0053b8f7
 }
 
+.project{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+    grid-gap: 20px;
+    margin-top: 50px;
+}
+
+.project .card{
+    background-color: transparent; 
+    width: 50%;
+    padding: 40px;
+    font-size: 13px;
+    font-weight: 13px;
+    border-right: 10px;
+    border-radius: 20px;
+    transition: background 0.5s, transform 0.5s;
+    box-shadow: 1px 1px 20px #012290f7, 
+    1px 1px 40px #0053b8f7
+}
+
+.project .card:hover{
+    box-shadow: 0 0 5px cyan, 0 0 10px cyan,
+    0 0 20px cyan, 0 0 50px cyan, 0 0 100px cyan;
+}
+
+.project .card h2{
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+
+.project img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 5px;
+}
+
+.project .card i{
+    font-size: 50px;
+}
+
+.project .card p{
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
 .services-list div i{
     font-size: 50px;
-    margin-bottom: 30px;
 }
 
 .services-list div h2 {
     font-size: 30px;
-    font-weight: 500;
     margin-bottom: 15px;
 }
 
@@ -288,9 +346,89 @@ body {
     box-shadow: 0 0 20px cyan;
 }
 
+.bar{
+    font-size: 23px;
+}
+
+.Technical-bars .bar{
+    margin: 40px 0
+}
+
+.Technical-bars .bar:first-child {
+    margin-top: 0;
+}
+
+.Technical-bars .bar:last-child {
+    margin-bottom: 0;
+}
+
+.Technical-bars .bar .info{
+    margin-bottom: 5px;
+}
+
+.Technical-bars .bar .info span{
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.Technical-bars .bar .progress-line{
+    position: relative;
+    border-radius: 10px;
+    width: 100%;
+    height: 5px;
+    background-color: #000;
+}
 
 
-.services-list div:hover{
+
+.Technical-bars .bar .progress-line span{
+    height: 100%;
+    background-color: cyan;
+    position: absolute;
+    border-radius: 10px;
+}
+
+.progress-line.html span{
+    width: 70%;
+}
+
+.progress-line.css span{
+    width: 70%;
+}
+
+.progress-line.js span{
+    width: 60%;
+}
+
+.progress-line.php span{
+    width: 55%;
+}
+
+.progress-line.jv span{
+    width: 65%;
+}
+
+.progress-line.py span{
+    width: 60%;
+}
+
+.progress-line.cpp span{
+    width: 80%;
+}
+
+.progress-line.db span{
+    width: 75%;
+}
+
+.progress-line.figma span{
+    width: 40%;
+}
+
+.percent{
+    font-size: 20px;
+}
+
+.services-list .card:hover{
     box-shadow: 0 0 5px cyan, 0 0 25px cyan,
     0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
 }
@@ -299,6 +437,22 @@ body {
 .services-list div img {
     width: 50px;
     margin-bottom: 30px;
+}
+
+.certificate-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+    grid-gap: 20px;
+    margin-top: 50px;
+}
+
+.certificate-list img{
+    width: 100%;
+}
+
+.certificate-list div img:hover{
+    box-shadow: 0 0 5px cyan, 0 0 10px cyan,
+    0 0 20px cyan, 0 0 500px cyan, 0 0 100px cyan;
 }
 
 .footer div i{
@@ -418,4 +572,3 @@ body {
         opacity: 1;
     }
 }
-
