--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -73,7 +73,7 @@ body {
     animation: slideTop 1s ease forwards;
 }
 .navbar a:hover{
-    color: cyan;
+    color: rgb(4, 255, 255);
 }
 
 .home {
