--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -22,7 +22,9 @@ body {
     left: 0%;
     width: 100%;
     padding: 20px 10%;
-    background: #082b59;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    border-bottom: 3px solid rgba(255, 255, 255, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -499,6 +501,11 @@ body {
     text-align: center;
   }
 
+  .about-img {
+    height: 330px;
+    margin: auto;
+  }
+
   .about-img img {
     margin: auto;
     margin-top: 60px;
@@ -549,7 +556,7 @@ body {
   }
 
   .home {
-    height: auto;
+    height: 750px;
     padding: 120px 20px 60px;
   }
 
@@ -569,6 +576,11 @@ body {
     width: 150px;
     border-radius: 100px;
   }
+
+  .about-img{
+    height: 320px;
+  }
+
 
   .about-text h2 {
     font-size: 32px;
