--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -78,6 +78,10 @@ body {
     color: rgb(4, 255, 255);
 }
 
+.sidebar{
+    display: none;
+}
+
 .home {
     position: relative;
     width: 100%;
@@ -549,6 +553,29 @@ body {
     gap: 10px;
     margin-top: 10px;
   }
+
+  /* .sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100vh;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+    .sidebar a {
+        font-size: 20px;
+        margin: 10px 0;
+        color: white;
+        text-decoration: none;
+    } */
+
 
   .navbar a {
     margin: 5px 10px;
