--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -78,6 +78,10 @@ body {
     color: rgb(4, 255, 255);
 }
 
+.navbar .hamburger{
+    display: none;
+}
+
 .sidebar{
     display: none;
 }
@@ -475,6 +479,68 @@ body {
   animation: slideTop 3s ease forwards;
 }
 
+@media (max-width: 1158px){
+    .profileimage{
+        width: 250px;
+        height: auto;
+        border-radius: 125px;
+    }
+    .about-img img {
+    margin: auto;
+    margin-top: 60px;
+    margin-left: 100px;
+}
+}
+
+@media (max-width:1090px){
+    .profileimage{
+        width: 250px;
+        height: auto;
+        border-radius: 125px;
+    }
+      .navbar a{
+    display: none;
+  }
+
+  .navbar .hamburger {
+    display: flex;
+}
+  .sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 350px;
+    height: 100vh;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    z-index: 9999;
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+  .sidebar a {
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+    margin: 10px 0;
+    color: white;
+    text-decoration: none;
+    margin: 0;
+}
+
+.sidebar a:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: cyan;
+}
+
+.about-img img {
+    margin: auto;
+    margin-top: 60px;
+}
+}
+
 /* Tablet (<= 1024px) */
 @media (max-width: 1024px) {
   .home-content {
@@ -492,6 +558,43 @@ body {
   .home-content p {
     font-size: 20px;
   }
+
+  .navbar a{
+    display: none;
+  }
+
+  .navbar .hamburger {
+    display: flex;
+}
+  .sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 350px;
+    height: 100vh;
+    background: transparent;
+    backdrop-filter: blur(10px);
+    z-index: 9999;
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+  .sidebar a {
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+    margin: 10px 0;
+    color: white;
+    text-decoration: none;
+    margin: 0;
+}
+
+.sidebar a:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: cyan;
+}
 
   .profileimage {
     width: 200px;
@@ -541,20 +644,18 @@ body {
 /* Mobile (<= 600px) */
 @media (max-width: 600px) {
   .header {
-    flex-direction: column;
     padding: 15px 5%;
     text-align: center;
   }
 
-  .navbar {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 10px;
+  .navbar a{
+    display: none;
   }
 
-  /* .sidebar{
+  .navbar .hamburger {
+    display: flex;
+}
+  .sidebar{
     position: fixed;
     top: 0;
     right: 0;
@@ -563,27 +664,30 @@ body {
     background: transparent;
     backdrop-filter: blur(10px);
     z-index: 9999;
-    display: flex;
+    display: none;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
-    .sidebar a {
-        font-size: 20px;
-        margin: 10px 0;
-        color: white;
-        text-decoration: none;
-    } */
+  .sidebar a {
+    width: 100%;
+    padding: 15px;
+    font-size: 20px;
+    margin: 10px 0;
+    color: white;
+    text-decoration: none;
+    margin: 0;
+}
 
+.sidebar a:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: cyan;
+}
 
-  .navbar a {
-    margin: 5px 10px;
-    font-size: 16px;
-  }
 
   .home {
-    height: 750px;
+    height: 600px;
     padding: 120px 20px 60px;
   }
 
@@ -600,12 +704,16 @@ body {
   }
 
   .profileimage {
-    width: 150px;
+    width: 200px;
     border-radius: 100px;
   }
 
-  .about-img{
-    height: 320px;
+
+  .about-img img {
+    margin: auto;
+    margin-top: 40px;
+    width: 100%;
+    height: auto;
   }
 
 
