--- a/assets/style/app.css
+++ b/assets/style/app.css
@@ -58,7 +58,7 @@ body {
     color: white;
     text-decoration: none;
     font-weight: 600;
-    cursor: default;
+    cursor: pointer;
     opacity: 0;
     animation: slideRight 1s ease forwards;
 }
